实现博客的点赞，查询，删除功能

--- a/myblog-controller/src/main/resources/application.properties
+++ b/myblog-controller/src/main/resources/application.properties
@@ -24,4 +24,5 @@ mybatis.type-aliases-package=com.myblog.model
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 # 日志配置 开发可以使用debug，上线时推荐使用info，以防止日志文件太大
-logging.level.com.myblog=debug
+#logging.level.com.myblog=debug
+logging.level.com.myblog.mapper=debug
