--- a/myblog-controller/src/main/resources/application.properties
+++ b/myblog-controller/src/main/resources/application.properties
@@ -10,7 +10,7 @@ session.user.key=SESSION-USER
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 本地数据库配置
-spring.datasource.url=jdbc:mysql://192.168.179.102:3306/ash?useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.66.102:3306/ash?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=KQ^Kg9zWirS*qE!dNaz!*eMCWB03YcoD
 
@@ -25,4 +25,5 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 # 日志配置 开发可以使用debug，上线时推荐使用info，以防止日志文件太大
 #logging.level.com.myblog=debug
+# 配置日志为mapper包下，则可以输出sql语句
 logging.level.com.myblog.mapper=debug
