--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
                 <version>2.1.10.RELEASE</version>
             </dependency>
 
+            <!--    Java读取csv工具包    -->
+            <dependency>
+                <groupId>net.sourceforge.javacsv</groupId>
+                <artifactId>javacsv</artifactId>
+                <version>2.0</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
